# qodex

./: README.md  pyproject.toml
dev/: CODESTYLE.md  index.md  tests.md
docs/: index.md
src/qodex/: __main__.py
