[project]
name = "qodex"
description = "Qodex is my personal text editor. It is meant to work on my machine."
version = "0.1.0"

license = { file = "LICENSE" }
readme = "README.md"
keywords = ["text editor", "personal"]
urls = { repository = "https://github.com/qexat/qodex/" }

authors = [{ name = "Qexat", email = "contact@qexat.com" }]
maintainers = [{ name = "Qexat", email = "contact@qexat.com" }]

requires-python = ">=3.11"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
qodex = "qodex.__main__:main"

[project.optional-dependencies]
dev = ["pytest==7.4.0", "coverage==7.3.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
